referral code update

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -171,7 +171,12 @@
                 </ul>
             </li>
 
-
+           <li>
+                <a class="left-menu-link" href="#!/referrals-list">
+                   <i class="left-menu-link-icon icmn-collaboration"><!-- --></i>
+                    <span class="menu-top-hidden">Referrals</span>
+                </a>
+            </li>
 
 
 
