--- a/src/app/products-list/products-list.html
+++ b/src/app/products-list/products-list.html
@@ -89,7 +89,7 @@
                                 </div>
                             </div>
                             <div class="cui-ecommerce--catalog--item--descr">
-                            <div star-rating stars="5" outer-star-selection="stars" outer-percent="rating"   star-radius="10" rating-stars="{{products.review.avg_rating}}"  star-radius="10" sel-color="gold" back-color="white"></div>
+                            <div star-rating stars="5" outer-star-selection="stars" outer-percent="rating"   star-radius="10" rating-stars="{{products.review.avg_rating}}"  sel-color="gold" back-color="white"></div>
                             </div>
                         </div>
                     </div>
@@ -283,7 +283,7 @@
                                     <td class="text-nowrap">
                                      Ratings
                                     </td>
-                                    <td><div star-rating stars="5" outer-star-selection="stars" outer-percent="rating"   star-radius="10" rating-stars="{{modalDetials.starRatings}}"  star-radius="10" sel-color="gold" back-color="white"></div>{{modalDetials.review.avg_rating}}  </td>
+                                    <td> {{modalDetials.review.avg_rating}}  </td>
                                 </tr>
                                 <tr>
                                     <td class="text-nowrap">
