--- a/src/app/sales-list/sales-list.html
+++ b/src/app/sales-list/sales-list.html
@@ -16,6 +16,7 @@
                  Filters
 
             </h4>
+  
             <div class="col-xs-12">
                  <div class="col-xs-3  ">
                      <div class="form-group row">
@@ -33,10 +34,9 @@
                                     <label class="form-control-label" for="l0">Vendors </label>
                                 </div>
                                 <div class="col-md-9">
-                                    <select class="form-control" name="searchvendor" ng-model="search.vendor" ng-options="vendors.id as vendors.firstName for vendors in vendorList " >
-                                        <option value=""  selected >All</option>
-
-
+                                    <select ng-model="search.vendor" ng-options="vendors.id as vendors.firstName for vendors in vendorList track by vendors.id" class="form-control" name="searchvendor"   >
+                                       
+                                        <option value=""  selected >All </option> 
                                     </select>
                                 </div>
                             </div>
@@ -106,7 +106,9 @@
                                     <span data-toggle="tooltip" data-placement="right" title="Size M">M</span>
                                     <span data-toggle="tooltip" data-placement="right" title="Size XL">XL</span>
                                 </div> -->
-                               <div star-rating stars="5" outer-star-selection="stars" outer-percent="rating"   star-radius="10" rating-stars="{{sales.ratings}}"  star-radius="10" sel-color="gold" back-color="white"></div>
+                               <div star-rating stars="5" outer-star-selection="stars" outer-percent="rating"   star-radius="10" rating-stars="{{sales.ratings}}"    sel-color="gold" back-color="white"></div>
+                               
+                               
                                 <button type="button" id="notify-warning" class="btn btn-warning" ng-click="blockSaleConfirm(sales)"  >Block</button>
                             </div>
                         </div>
@@ -122,7 +124,7 @@
 
 
 <!-- modal popup to Sale details-->
- <div class="modal fade" id="saleDetails" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+ <div class="modal fade modal-size-large" id="saleDetails" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
