--- a/src/app/index.html
+++ b/src/app/index.html
@@ -170,6 +170,21 @@
 
                 </ul>
             </li>
+             <li class="left-menu-list-submenu">
+                <a class="left-menu-link" href="javascript: void(0);">
+                    <i class="left-menu-link-icon icmn-cart5"> </i>
+                  SMS / Email
+                </a>
+                <ul class="left-menu-list list-unstyled">
+                     <li>
+                        <a class="left-menu-link" href="#!/smsemail">
+                            Send Sms
+                        </a>
+                    </li>
+                      
+
+                </ul>
+            </li>
 
            <li>
                 <a class="left-menu-link" href="#!/referrals-list">
