added bulk email functionality

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -25,6 +25,7 @@
     <!-- Clean UI Styles -->
     <link rel="stylesheet" type="text/css" href="assets/common/css/main.min.css">
     <link rel="stylesheet" type="text/css" href="assets/common/css/star-rating.css">
+      <link rel="stylesheet" type="text/css" href="assets/vendors/summernote/dist/summernote.css">
 
 
     <!-- Vendors Scripts -->
@@ -50,6 +51,8 @@
     <script src="assets/vendors/bootstrap-sweetalert/dist/sweetalert.min.js"></script>
     <script src="assets/vendors/remarkable-bootstrap-notify/dist/bootstrap-notify.min.js"></script>
     <script src="assets/vendors/summernote/dist/summernote.min.js"></script>
+
+    
     <script src="assets/vendors/owl.carousel/dist/owl.carousel.min.js"></script>
     <script src="assets/vendors/ionrangeslider/js/ion.rangeSlider.min.js"></script>
     <script src="assets/vendors/nestable/jquery.nestable.js"></script>
@@ -84,7 +87,7 @@
     <!--<script src="assets/vendors/angular-route/angular-route.min.js"></script>-->
     <script src="assets/vendors/angular-ui-router/angular-ui-router.min.js"></script>
 
-
+    <script src="assets/vendors/summernote/dist/angular-summernote.js"></script>
     <script src="assets/common/js/version_angular/app.js"></script>
     <script src="assets/app.min.js"></script>
 
