latest code changes

--- a/src/app/send-sms-email/users-list.html
+++ b/src/app/send-sms-email/users-list.html
@@ -6,8 +6,8 @@
             <h2> Send Sms / Email
                 <div class="pull-right">
                 
-                  <a href="javascrit: void(0);" class="btn btn-primary"  ng-click="sendBulkSMS()">Send Sms</a>
-                  <a href="javascrit: void(0);" class="btn btn-primary"  ng-click="sendBulkEmail()">Send Email</a>
+                  <button class="btn btn-primary"  ng-click="sendBulkSMS()">Send Sms</button>
+                  <button class="btn btn-primary"  ng-click="sendBulkEmail()">Send Email</button>
                   </div>
             </h2>
         
@@ -50,7 +50,7 @@
                      
                   </div>
           
-                   <div class="col-xs-2"><a href="javascript: void(0);" class="pull-right btn btn-primary" ng-click="resetFilters()">Reset</a></div>
+                   <div class="col-xs-2"><button class="pull-right btn btn-primary" ng-click="resetFilters()">Reset</button></div>
             </div>
         </div>
         <div class="panel-body">
