sale block issues fixed

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -341,42 +341,42 @@
                     </li>
                 </ul>
             </li>
-            <li class="menu-top-hidden no-colorful-menu">
-                <div class="example-left-menu-chart chartist-animated chartist-theme-dark"></div>
-                <script>
-                    $(function () {
-                        // CSS STYLING & ANIMATIONS
-                        var cssAnimationData = {
-                            labels: ["S", "M", "T", "W", "T", "F", "S"],
-                            series: [
-                                [11, 14, 16, 16, 20, 17, 21]
-                            ]
-                        },
-                        cssAnimationOptions = {
-                            fullWidth: !0,
-                            chartPadding: {
-                                right: 2,
-                                left: 30
-                            },
-                            axisY: {
-                                position: 'end'
-                            }
-                        },
-                        cssAnimationResponsiveOptions = [
-                            [{
-                                axisX: {
-                                    labelInterpolationFnc: function(value, index) {
-                                        return index % 2 !== 0 ? !1 : value
-                                    }
-                                }
-                            }]
-                        ];
+            <!--<li class="menu-top-hidden no-colorful-menu">-->
+                <!--<div class="example-left-menu-chart chartist-animated chartist-theme-dark"></div>-->
+                <!--<script>-->
+                    <!--$(function () {-->
+                        <!--// CSS STYLING & ANIMATIONS-->
+                        <!--var cssAnimationData = {-->
+                            <!--labels: ["S", "M", "T", "W", "T", "F", "S"],-->
+                            <!--series: [-->
+                                <!--[11, 14, 16, 16, 20, 17, 21]-->
+                            <!--]-->
+                        <!--},-->
+                        <!--cssAnimationOptions = {-->
+                            <!--fullWidth: !0,-->
+                            <!--chartPadding: {-->
+                                <!--right: 2,-->
+                                <!--left: 30-->
+                            <!--},-->
+                            <!--axisY: {-->
+                                <!--position: 'end'-->
+                            <!--}-->
+                        <!--},-->
+                        <!--cssAnimationResponsiveOptions = [-->
+                            <!--[{-->
+                                <!--axisX: {-->
+                                    <!--labelInterpolationFnc: function(value, index) {-->
+                                        <!--return index % 2 !== 0 ? !1 : value-->
+                                    <!--}-->
+                                <!--}-->
+                            <!--}]-->
+                        <!--];-->
 
-                        new Chartist.Line(".example-left-menu-chart", cssAnimationData, cssAnimationOptions, cssAnimationResponsiveOptions);
+                        <!--new Chartist.Line(".example-left-menu-chart", cssAnimationData, cssAnimationOptions, cssAnimationResponsiveOptions);-->
 
-                    });
-                </script>
-            </li>
+                    <!--});-->
+                <!--</script>-->
+            <!--</li>-->
 
         </ul>
     </div>
